# docker_compose_pr

./: .dockerignore  .env.template  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  PROJECT_SUMMARY.md  README.md  docker-compose.yml  init.py  manage.py  pyproject.toml  requirements.txt  setup.py
config/: config.example.yaml
config/templates/: docker-compose.yml.template
docker_compose_manager/: __init__.py
docker_compose_manager/async_tasks/: __init__.py
docker_compose_manager/async_tasks/schedulers/: __init__.py
docker_compose_manager/async_tasks/workers/: __init__.py
docker_compose_manager/compose/: __init__.py
docker_compose_manager/compose/deployment/: manager.py
docker_compose_manager/compose/orchestration/: orchestrator.py
docker_compose_manager/core/config/: __init__.py  loader.py
docker_compose_manager/core/logging/: __init__.py  formatters.py  json_logger.py
docker_compose_manager/data/: __init__.py
docker_compose_manager/data/analytics/: __init__.py
docker_compose_manager/data/processors/: __init__.py
docker_compose_manager/django_app/: __init__.py  apps.py  urls.py  wsgi.py
docker_compose_manager/django_app/api/: urls.py
docker_compose_manager/django_app/settings/: base.py
docker_compose_manager/multitenant/: __init__.py
docker_compose_manager/multitenant/managers/: tenant_manager.py
docker_compose_manager/multitenant/models/: tenant.py
docker_compose_manager/network/: __init__.py
docker_compose_manager/network/ipam/: __init__.py
docker_compose_manager/network/napalm_adapter/: __init__.py
docker_compose_manager/network/netmiko_adapter/: __init__.py
docs/api/: README.md
docs/guides/: INITIALIZATION.md  QUICKSTART.md
scripts/: example_workflow.py
scripts/deployment/: deploy.sh
tests/: __init__.py  conftest.py
tests/unit/: test_tenant.py
