[tool.poetry]
name = "docker-compose-manager"
version = "1.0.1"
description = "Enterprise-level system for managing multitenant Docker Compose v3 deployments"
authors = ["Enterprise Team <team@example.com>"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/nullroute-commits/docker_compose_pr"
repository = "https://github.com/nullroute-commits/docker_compose_pr"
documentation = "https://github.com/nullroute-commits/docker_compose_pr"
keywords = ["docker", "compose", "multitenant", "deployment", "orchestration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
packages = [{include = "docker_compose_manager"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
Django = [
    { version = "^4.2.26", python = ">=3.9,<3.10" },
    { version = "^5.1.14", python = ">=3.10,<3.14" },
]
djangorestframework = "^3.15.2"
django-cors-headers = "^4.6.0"
django-filter = "^24.3"
gunicorn = "^23.0.0"
pandas = "^2.2.3"
numpy = [
    { version = "^1.26.4", python = ">=3.9,<3.10" },
    { version = "^2.1.3", python = ">=3.10,<3.14" },
]
netmiko = "^4.4.0"
napalm = "^5.0.0"
pynetbox = "^7.4.1"
asyncio = "^3.4.3"
aiohttp = "^3.13.3"
asyncpg = "^0.30.0"
docker = "^7.1.0"
docker-compose = "^1.29.2"
psycopg2-binary = "^2.9.10"
redis = "^5.2.1"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.2"
toml = "^0.10.2"
python-json-logger = "^3.2.1"
structlog = "^24.4.0"
pydantic = "^2.10.4"
marshmallow = "^3.24.1"
requests = "^2.32.3"
click = "^8.1.8"
rich = "^13.9.4"
cryptography = "^46.0.5"
python-decouple = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-django = "^4.9.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
factory-boy = "^3.3.1"
black = "^24.10.0"
flake8 = "^7.1.1"
mypy = "^1.13.0"
pylint = "^3.3.2"

[tool.poetry.scripts]
dcm-init = "init:main"
dcm-manage = "manage:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pylint.messages_control]
max-line-length = 100
disable = ["C0111", "C0103"]
